chore: database url env added

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: #
+      DATABASE_URL: postgres://postgres:postgres@db:5432/mydatabase
     depends_on:
       - db
   
